--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "express": "^4.18.2",
     "pinia": "^2.0.23",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
@@ -23,7 +24,21 @@
     "@vue/eslint-config-prettier": "^7.0.0",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "vite": "^3.0.9"
-  }
+  },
+  "description": "This template should help get you started developing with Vue 3 in Vite.",
+  "main": "vite.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ProgrammeringQuiz/Quiz.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ProgrammeringQuiz/Quiz/issues"
+  },
+  "homepage": "https://github.com/ProgrammeringQuiz/Quiz#readme"
 }
